package com.ITJobsBackend.shared.domain.exceptions;

public class NotFoundException extends DomainException {

  public NotFoundException(String message) {
    super(message);
  }
}
