@startuml ClassDiagramShared

title Shared Kernel — Value Objects, Eventos y Excepciones

skinparam classBackgroundColor #FAFAFA
skinparam classBorderColor #888888

package "shared.domain.valueobjects" #E8EAF6 {
    class Email <<ValueObject>> {
        - value : String
        + of(raw) : Email
        + value() : String
    }
    class UserId <<ValueObject>> {
        - value : UUID
        + of(str) : UserId
        + generate() : UserId
    }
    class JobId <<ValueObject>> {
        - value : UUID
        + of(str) : JobId
        + generate() : JobId
    }
    class Password <<ValueObject>> {
        - value : String
        + of(raw) : Password
    }
    class Timestamp <<ValueObject>> {
        - value : Instant
        + now() : Timestamp
        + of(instant) : Timestamp
    }
}

package "shared.domain.event" #E3F2FD {
    abstract class DomainEvent {
        - occurredOn : Instant
        - aggregateId : String
        - aggregateType : String
    }
}

package "shared.domain.exceptions" #FFEBEE {
    abstract class DomainException
    class ValidationException
    class NotFoundException

    DomainException <|-- ValidationException
    DomainException <|-- NotFoundException
}

package "shared.application.ports.out" #F3E5F5 {
    interface DomainEventPublisher {
        + publishAll(events : List<DomainEvent>)
    }
}

package "shared.infrastructure" #FFF3E0 {
    class SpringDomainEventPublisher
    SpringDomainEventPublisher ..|> DomainEventPublisher
}

@enduml

